tests/fixtures/invalid/float_rshift_bool.py
# Cannot right shift Float and Bool
x: float = 1.0 >> True
